<?xml version="1.0"?>
<package format="2">
  <name>rmw_implementation</name>
  <version>0.0.0</version>
  <description>The decision which ROS middleware implementation should be used for C++.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rmw_implementation_cmake</build_depend>

  <depend>rmw_connext_cpp</depend>
  <depend>rmw_connext_dynamic_cpp</depend>
  <depend>rmw_fastrtps_cpp</depend>
  <depend>rmw_opensplice_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
